test-expected/large/foolineage/VirtualService.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    foo.com/duname: dmdplin
    foo.com/duversion: 1.7.97-20190924.1569378293749
    foo.com/version: 1.7.97
  labels:
    app.kubernetes.io/name: foolineage
    helm.sh/chart: foolineage-1.7.97
  name: foolineage
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /FOOLineage
    - uri:
        prefix: /FOOLineage/
    route:
    - destination:
        host: foolineage.peekay.svc.cluster.local
